microservices/spred.api.playlist/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: playlist-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    targetPort: 8080
    port: 8080
  selector:
    app: playlist-service
